--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/authProject
+MONGO_URI=MONGO_URI=mongodb+srv://campusAdmin:Campus123@cluster0.mongodb.net/campus?retryWrites=true&w=majority
+
 SESSION_SECRET=qwsedfgbhnjmhyegdhcncbpoijhgfcdxwerrfghnm
