--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 PORT=3000
-MONGO_URI=MONGO_URI=mongodb+srv://campusAdmin:Campus123@cluster0.mongodb.net/campus?retryWrites=true&w=majority
-
+MONGO_URI=mongodb://localhost:27017/authProject
 SESSION_SECRET=qwsedfgbhnjmhyegdhcncbpoijhgfcdxwerrfghnm
