Updated MongoDB connection for deployment

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:127.0.0.1/authProject
-SESSION_SECRET=qwsedfgbhnjmhyegdhcncbpoijhgfcdxwerrfghnm
+MONGO_URI=mongodb+srv://myuser:mypassword@cluster0.mongodb.net/campus?retryWrites=true&w=majority
+SECRET_KEY=mysehggftghnsxdcvbokjnbefgbnokcretkey
